--- a/frontend/Techflow/src/index.css
+++ b/frontend/Techflow/src/index.css
@@ -62,3 +62,7 @@
 .user-card {
   @apply bg-white p-4 rounded-xl shadow-md shadow-gray-100 border border-gray-200/50;
 }
+
+.whiteboard-card {
+  @apply bg-white px-4 py-4 rounded-2xl border border-gray-200/50;
+}
