--- a/frontend/Techflow/src/index.css
+++ b/frontend/Techflow/src/index.css
@@ -66,3 +66,11 @@
 .whiteboard-card {
   @apply bg-white px-4 py-4 rounded-2xl border border-gray-200/50;
 }
+
+.checkbox {
+  @apply w-4 h-4 accent-primary bg-gray-100 border-gray-300 rounded-sm outline-none cursor-pointer flex-shrink-0;
+}
+
+.trashcan-btn {
+  @apply text-rose-500 hover:text-rose-300 cursor-pointer;
+}
