--- a/frontend/Techflow/src/index.css
+++ b/frontend/Techflow/src/index.css
@@ -74,3 +74,7 @@
 .trashcan-btn {
   @apply text-rose-500 hover:text-rose-300 cursor-pointer;
 }
+
+.edit-btn {
+  @apply flex items-center gap-1 text-base md:text-lg font-medium text-gray-700 hover:text-primary bg-gray-50 hover:bg-blue-50 px-2.5 py-2.5 rounded-full border border-gray-200/50 cursor-pointer whitespace-nowrap;
+}
